third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/max_encoded_len_ui/union.stderr
error: Union types are not supported.
 --> tests/max_encoded_len_ui/union.rs:4:1
  |
4 | union Union {
  | ^^^^^
